# boostlocroc

./: .gitignore  Application_vDB.ipynb  README.md  environment.yml  loc_roc_Martin.ipynb  loc_roc_VitalDB.ipynb  loc_roc_results_Emilia_syr.csv  loc_roc_results_VitalDB.csv  pyproject.toml  quickstart.ipynb  quickstart_vitaldb.ipynb  requirements.txt
boost_loc_roc/: LoC_RoC.py  eeg_features.py  miscelaneous.py  model.py  sklearntoonnx.py  vis.py
boost_loc_roc/archive/: data.py  evaluation.py  model.py  prediction.py  sklearntoonnx.py
boost_loc_roc/utils/: evaluation.py  make_spectral_feature.py  onnx.py  prediction.py  preprocessing.py  training.py  visualization.py
boostlocroc/: LoC_RoC.py  __init__.py  eeg_features.py  main.py  miscelaneous.py  model.py  vis.py
boostlocroc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
boostlocroc/archive/: data.py  environment.yml  evaluation.py  make_spectral_feature.py  model.py  prediction.py  sklearntoonnx.py  training.py  visualization.py
boostlocroc/utils/: __init__.py  data.py  evaluation.py  make_spectral_feature.py  onnx.py  prediction.py  preprocessing.py  training.py  visualization.py
data/VdB_tables/: Output_existing_data.csv  Relevant_params.csv
data/raw/: eeg_example.fif
src/boost_loc_roc/: LoC_RoC.py  eeg_features.py  miscelaneous.py  model.py
src/boost_loc_roc/model_weights/: cross_val_weights_42_--w--0.pkl  cross_val_weights_42_--w--1.pkl  cross_val_weights_42_--w--2.pkl
src/boost_loc_roc/utils/: data.py  evaluation.py  make_spectral_feature.py  prediction.csv  prediction.py  training.py  visualization.py
