[project]
name = "boostlocroc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.9.2",
    "mne>=1.5.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn==1.3.2",
    "scipy>=1.11.1",
    "tqdm>=4.66.5",
    "vitaldb>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boostlocroc"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]
